--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,13 +33,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v3
-        with:
-          source: './,./examples,./models'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: '.'
+          path: './*'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
