--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,22 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: '.,./examples'
+          path: '.'
+        name: Upload artifact examples
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: './examples'
+        name: Upload artifact models
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: './models'
+        name: Upload artifact js
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: './js-esm'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
