--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,17 +38,17 @@ jobs:
         with:
           # Upload entire repository
           path: '.'
-      - name: Upload artifact examples
+      - name: Upload2 artifact examples
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: './examples'
-      - name: Upload artifact models
+      - name: Upload3 artifact models
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
           path: './models'
-      - name: Upload artifact js
+      - name: Upload4 artifact js
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
