--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 *.onnx filter=lfs diff=lfs merge=lfs -text
-models/matcha-tts/*.onnx filter=lfs diff=lfs merge=lfs -text
+examples/models/matcha-tts/*.onnx filter=lfs diff=lfs merge=lfs -text
